<resources>
    <string name="web_client_id">302249197704-1mktsng1iv1qondi4o9dcjklg99atag7.apps.googleusercontent.com</string>

    <string name="app_name">3 Words</string>
    <string name="title_activity_browse">Browse</string>
    <string name="title_activity_story">Story</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dictionary">Pending Dictionary Entries</string>

    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="preference_file_key">com.sam.words.PREFERENCE_FILE_KEY</string>
    <string name="saved_text_size">com.sam.words.PREFERENCE_TEXT_SIZE</string>
    <string name="new_story">New story</string>
    <string name="add_story">Create</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="sign_in">Sign in</string>
    <string name="setting_text_size_save">Save</string>
    <string name="setting_text_size_bigger">Bigger</string>
    <string name="setting_text_size_smaller">Smaller</string>
    <string name="new_story_title_hint">Title</string>
    <string name="new_story_author_hint">Author</string>
    <string name="new_story_content_hint">Your first words</string>
    <string name="sign_out">Sign out</string>
    <string name="new_story_title">New story</string>
    <string name="your_3_words">Your 3 words...</string>
    <string name="your_chapter_title">Your chapter title</string>
    <string name="submit">Submit</string>

    <string name="text_size_preview_text">The quick brown fox jumped over the lazy dog. THE QUICK BROWN FOX JUMPED OVER THE LAZY DOG!</string>
    <string name="submitted">Submitted!</string>
    <string name="you_won_last_round">Congrats, you won the last round!</string>
    <string name="the_end">The End</string>
    <string name="coming_soon_blurbs">Coming soon: blurbs!</string>
</resources>
