<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context="com.sam.words.story.StoryFragment">

    <LinearLayout
        android:id="@+id/the_end_container"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/the_end"
            android:text="@string/the_end"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/coming_soon_blurbs"
            android:textAlignment="center"
            android:drawablePadding="6dp"
            android:drawableLeft="@drawable/ic_announcement"
            android:drawableStart="@drawable/ic_announcement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/poll_root"
        android:background="@color/grayLtr"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:padding="24dp">

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/sign_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/poll_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="6dp"
                />

            <LinearLayout
                android:id="@+id/submit_container"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/poll_input"
                    android:hint="@string/your_3_words"
                    android:inputType="textAutoCorrect"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/poll_submit"
                    android:text="@string/submit"
                    android:enabled="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/poll_round"
                android:text="round"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/poll_timer"
                android:text="timer"
                android:textAlignment="center"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/votes_list"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
